clusters/home/apps/karakeep/karakeep/configs/karakeep-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep-ingressroute
  namespace: karakeep
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://karakeep.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Karakeep
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: karakeep # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Karakeep
    #gethomepage.dev/widget.type: "karakeep"
    #gethomepage.dev/widget.url: "https://karakeep.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`karakeep.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: karakeep
      port: 3000
  tls:
    secretName: karakeep-certificate-secret
